[gd_scene load_steps=2 format=3 uid="uid://dpat8g2hmk8t0"]

[ext_resource type="Script" uid="uid://bp8h5ceosqgip" path="res://addons/contentmanager/editor/item_editor.gd" id="1_nxr4o"]

[node name="ItemEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nxr4o")

[node name="EditorView" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Delete" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Delete"

[node name="Revert" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Revert"

[node name="SaveChanges" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save Changes"

[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Revert" to="." method="revert"]
[connection signal="pressed" from="HBoxContainer/SaveChanges" to="." method="save_changes"]
